#4 Fix conan install
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
           - conan profile update settings.compiler.libcxx=libstdc++11 default
         script:
           - cd libraries/protobuf/serialization && mkdir build && cd build
-          - conan install
+          - conan install ..
           - cmake ..
           - cmake --build .
           - bin/sensor
