#4 Activate pyenv on OSX
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ osx: &osx
    os: osx
    language: generic
    before_script:
-     - source /Users/travis/.pyenv/shims/activate
+     - eval "$(pyenv init -)"
+     - pyenv activate conan
 matrix:
    include:
 
