--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,13 @@ environment:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
           PROJECT_DIR: libraries/folly/basic
+        # Conan Workspaces
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+          CMAKE_GENERATOR: "Visual Studio 14 2015 Win64"
+          PROJECT_DIR: features/workspace/cmake
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
+          PROJECT_DIR: features/workspace/cmake
 
 install:
   - set PATH=%PYTHON%;%PYTHON%/Scripts/;%PATH%
