--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,13 @@ environment:
     PYTHON: "C:\\Python37"
 
     matrix:
+        # Conan Getting Started
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+          CMAKE_GENERATOR: "Visual Studio 14 2015 Win64"
+          PROJECT_DIR: libraries/poco/md5
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
+          PROJECT_DIR: libraries/poco/md5
         # Conan Workspaces
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CMAKE_GENERATOR: "Visual Studio 14 2015 Win64"
