--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+!*/build.sh
+
 # Compiled Object files
 *.slo
 *.lo
@@ -35,10 +37,10 @@ test_package/build/*
 build/*
 *.pyc
 tmp/
-features/workspace/build*
-libraries/protobuf/serialization/build*
-libraries/folly/basic/build*
-libraries/poco/md5/build*
+features/workspace/build/*
+libraries/protobuf/serialization/build/*
+libraries/folly/basic/build/*
+libraries/poco/md5/build/*
 
 # IDE
 .idea/*
