--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,27 @@ osx: &osx
 
 matrix:
    include:
-      - stage: Conan Workspaces
+     - stage: CMake reuse exported targets multiconfig
+       <<: *linux
+       script:
+         - cd features/cmake/find_package/exported_targets_multiconfig
+         - ./build.sh
+     - <<: *osx
+       script:
+         - cd features/cmake/find_package/exported_targets_multiconfig
+         - ./build.sh
+
+     - stage: CMake cmake_find_package_multi generator
+       <<: *linux
+       script:
+         - cd features/cmake/find_package/find_cmake_multi_generator_targets
+         - ./build.sh
+     - <<: *osx
+       script:
+         - cd features/cmake/find_package/find_cmake_multi_generator_targets
+         - ./build.sh
+
+     - stage: Conan Workspaces
         <<: *linux
         script:
           - cd features/workspace/cmake
