Added Poco MD5 example for docs getting started (#8)
* Added Poco MD5 example

* updated gitignore

* Included it in general readme

* Enabled CI support

* fix build scripts

* file permissions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+!*/build.sh
+
 # Compiled Object files
 *.slo
 *.lo
@@ -35,8 +37,10 @@ test_package/build/*
 build/*
 *.pyc
 tmp/
+features/workspace/build/*
 libraries/protobuf/serialization/build/*
 libraries/folly/basic/build/*
+libraries/poco/md5/build/*
 
 # IDE
 .idea/*
