--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,6 +33,7 @@ environment:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
           PROJECT_DIR: features/cmake/find_package/exported_targets_multiconfig
+        # Using the cmake_find_package_multi generator
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
           PROJECT_DIR: features/cmake/find_package/find_cmake_multi_generator_targets
