fix travis matrix [skip appveyor]

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,39 +22,39 @@ matrix:
    include:
       # All Linux first in parallel
       - stage: Linux builds
-        - name: Getting started
-          <<: *linux
-          env: FOLDER=libraries/poco/md5
-        - name: Conan Workspaces
-          <<: *linux
-          env: FOLDER=features/workspace/cmake
-        - name: Package development flow
-          <<: *linux
-          env: FOLDER=features/package_development_flow
-        - name: Serializing your data with Protobuf
-          <<: *linux
-          env: FOLDER=libraries/protobuf/serialization
-        - name: Using Facebook Folly with Conan
-          <<: *linux
-          env: FOLDER=libraries/folly/basic
+        name: Getting started
+        <<: *linux
+        env: FOLDER=libraries/poco/md5
+      - name: Conan Workspaces
+        <<: *linux
+        env: FOLDER=features/workspace/cmake
+      - name: Package development flow
+        <<: *linux
+        env: FOLDER=features/package_development_flow
+      - name: Serializing your data with Protobuf
+        <<: *linux
+        env: FOLDER=libraries/protobuf/serialization
+      - name: Using Facebook Folly with Conan
+        <<: *linux
+        env: FOLDER=libraries/folly/basic
 
       # All Macs later
       - stage: Macos builds
-        - name: Getting started
-          <<: *osx
-          env: FOLDER=libraries/poco/md5
-        - name: Conan Workspaces
-          <<: *osx
-          env: FOLDER=features/workspace/cmake
-        - name: Package Development Flow
-          <<: *osx
-          env: FOLDER=features/package_development_flow
-        - name: Serializing your data with Protobuf
-          <<: *osx
-          env: FOLDER=libraries/protobuf/serialization
-        - name: Using Facebook Folly with Conan
-          <<: *osx
-          env: FOLDER=libraries/folly/basic
+        name: Getting started
+        <<: *osx
+        env: FOLDER=libraries/poco/md5
+      - name: Conan Workspaces
+        <<: *osx
+        env: FOLDER=features/workspace/cmake
+      - name: Package Development Flow
+        <<: *osx
+        env: FOLDER=features/package_development_flow
+      - name: Serializing your data with Protobuf
+        <<: *osx
+        env: FOLDER=libraries/protobuf/serialization
+      - name: Using Facebook Folly with Conan
+        <<: *osx
+        env: FOLDER=libraries/folly/basic
 
 script:
  - cd "${FOLDER}"
