Add example of package development flow (#12)
* Add example of package development flow

* use conventional scripts

* fix hello version in script

* fix travis matrix [skip appveyor]

* use bat and sh

* Update features/package_development_flow/build.sh

Co-Authored-By: danimtb <danimanzaneque@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ test_package/build/*
 build/*
 *.pyc
 tmp/
+features/package_development_flow/test_package/build/*
 features/workspace/build/*
 libraries/protobuf/serialization/build/*
 libraries/folly/basic/build/*
