--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,13 @@ environment:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
           PROJECT_DIR: features/workspace/cmake
+        # Package Development flow
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+          CMAKE_GENERATOR: "Visual Studio 14 2015 Win64"
+          PROJECT_DIR: features/package_development_flow
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
+          PROJECT_DIR: features/package_development_flow
         # Serializing your data with Protobuf
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CMAKE_GENERATOR: "Visual Studio 14 2015 Win64"
