--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,6 +44,10 @@ environment:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
           PROJECT_DIR: features/cmake/find_package/find_cmake_multi_generator_targets
+        # Python requires: reusing a conanfile
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
+          PROJECT_DIR: features/python_requires/reuse_conanfile
 
 install:
   - set PATH=%PYTHON%;%PYTHON%/Scripts/;%PATH%
