add Emscripten demo (#13)
* - add Emscripten demo

Signed-off-by: SSE4 <tomskside@gmail.com>

* - add Emscripten to CI

Signed-off-by: SSE4 <tomskside@gmail.com>

* Update features/emscripten/build.bat

Co-Authored-By: SSE4 <tomskside@gmail.com>

* Update features/emscripten/build.sh

Co-Authored-By: SSE4 <tomskside@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,9 @@ matrix:
       - name: CMake cmake_find_package_multi generator
         <<: *linux
         env: FOLDER=features/cmake/find_package/find_cmake_multi_generator_targets
+      - name: Emscripten
+        <<: *linux
+        env: FOLDER=features/emscripten
       - name: Python requires (reuse conanfile)
         <<: *linux
         env: FOLDER=features/python_requires/reuse_conanfile
@@ -70,6 +73,9 @@ matrix:
       - name: CMake cmake_find_package_multi generator
         <<: *osx
         env: FOLDER=features/cmake/find_package/find_cmake_multi_generator_targets
+      - name: Emscripten
+        <<: *osx
+        env: FOLDER=features/emscripten
       - name: Python requires (reuse conanfile)
         <<: *osx
         env: FOLDER=features/python_requires/reuse_conanfile
