--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,6 +52,10 @@ environment:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
           PROJECT_DIR: features/python_requires/reuse_conanfile
+        # Multi config package (N configs -> 1 package)
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
+          PROJECT_DIR: features/multi_config
 
 install:
   - set PATH=%PYTHON%;%PYTHON%/Scripts/;%PATH%
