--- a/features/multi_config/test_package/CMakeLists.txt
+++ b/features/multi_config/test_package/CMakeLists.txt
@@ -1,8 +1,12 @@
-project(PackageTest CXX)
 cmake_minimum_required(VERSION 2.8.12)
+project(PackageTest CXX)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
 add_executable(example example.cpp)
-conan_target_link_libraries(example)
+if (CONAN_SETTINGS_BUILD_TYPE STREQUAL "Debug")
+    target_link_libraries(example ${CONAN_LIBS_DEBUG})
+else()
+    target_link_libraries(example ${CONAN_LIBS_RELEASE})
+endif()
