force CONFIG mode in find_package over MODULE mode

--- a/features/cmake/find_package/exported_targets_multiconfig/bye/src/CMakeLists.txt
+++ b/features/cmake/find_package/exported_targets_multiconfig/bye/src/CMakeLists.txt
@@ -21,7 +21,7 @@ target_include_directories(${TARGET_NAME} PUBLIC
                            "$<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${CMAKE_INSTALL_INCLUDEDIR}>")
 
 foreach(dep ${TARGETS_TO_FIND})
-    find_package(${dep})
+    find_package(${dep} CONFIG)
     message("BUILD TYPE: ${CMAKE_BUILD_TYPE}")
     target_link_libraries(${TARGET_NAME} ${dep}::${dep})
 endforeach()
