--- a/features/cmake/find_package/find_cmake_multi_generator_targets/bye/src/CMakeLists.txt
+++ b/features/cmake/find_package/find_cmake_multi_generator_targets/bye/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(PackageTest CXX)
 
-find_package(hello)
+find_package(hello CONFIG)
 add_library(bye bye.cpp)
 target_link_libraries(bye hello::hello)
