--- a/features/cmake/find_package/find_cmake_multi_generator_targets/project/CMakeLists.txt
+++ b/features/cmake/find_package/find_cmake_multi_generator_targets/project/CMakeLists.txt
@@ -4,6 +4,6 @@ project(PackageTest CXX)
 set(CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR})
 set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
 
-find_package(bye)
+find_package(bye CONFIG)
 add_executable(example example.cpp)
 target_link_libraries(example bye::bye)
