--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,9 @@ matrix:
       - name: Using Facebook Folly with Conan
         <<: *linux
         env: FOLDER=libraries/folly/basic
+      - name: Introduction to Dear ImGui
+        <<: *linux
+        env: FOLDER=libraries/dear-imgui/basic
       - name: CMake reuse exported targets multiconfig
         <<: *linux
         env: FOLDER=features/cmake/find_package/exported_targets_multiconfig
@@ -70,6 +73,9 @@ matrix:
       - name: Using Facebook Folly with Conan
         <<: *osx
         env: FOLDER=libraries/folly/basic
+      - name: Introduction to Dear ImGui
+        <<: *osx
+        env: FOLDER=libraries/dear-imgui/basic
       - name: CMake reuse exported targets multiconfig
         <<: *osx
         env: FOLDER=features/cmake/find_package/exported_targets_multiconfig
