--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,6 +36,13 @@ environment:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
           PROJECT_DIR: libraries/folly/basic
+        # Introduction to Dear ImGui
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+          CMAKE_GENERATOR: "Visual Studio 14 2015 Win64"
+          PROJECT_DIR: libraries/dear-imgui/basic
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
+          PROJECT_DIR: libraries/dear-imgui/basic
         # Using Conan with find_package and exported targets
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
